# ts3client-pluginsdk

./: CMakeLists.txt
